better-routes/tests/trybuild/fail/should-fail-with-invalid-state.stderr
error[E0308]: mismatched types
  --> tests/trybuild/fail/should-fail-with-invalid-state.rs:13:13
   |
13 |     name => AllRoutes,
   |             ^^^^^^^^^
   |             |
   |             expected `Router`, found `Router<FooState>`
   |             expected `Router` because of return type
14 |     "/:id" => Foo {
15 |         get => get
   |                --- here the type of `r` is inferred to be `Router<FooState>`
   |
   = note: expected struct `Router<()>`
              found struct `Router<FooState>`
